java/java-tests/testData/codeInsight/daemonCodeAnalyzer/javaDoc/RecordParamJava16.java
/**
 * @param <error descr="Cannot resolve symbol 'i'">i</error> here description goes
 * @param test here test description goes
 */

record Test(int test) {
}